# meltano-state-backend-postgresql

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yaml  test.yaml
fixtures/project/: meltano.yml
src/meltano_state_backend_postgres/: __init__.py  backend.py
src/meltano_state_backend_postgresql/: backend.py
tests/: conftest.py  test_backend.py  test_backward_compat.py  test_backwards_compat.py  test_conninfo.py  test_integration.py  test_meltano.py  test_state.py
